# toopan2d

./: CMakeLists.txt  Dockerfile  FILES_LIST.txt  GITHUB_GUIDE.md  PROJECT_COMPLETE.md  README.md  SETUP_INSTRUCTIONS.md  SIMPLE_SOLUTIONS.md  build.gradle.with_ndk  build_apk.bat  build_simple.gradle  build_simple_apk.bat  build_simple_now.bat  final_solution.md  gradlew  gradlew.bat  install_java_and_build.ps1  local.properties  prepare_for_github.bat  proguard-rules.pro  quick_setup.bat  simple_build.md  validate_project.bat
.github/workflows/: build-simple.yml  build.yml
src/main/: AndroidManifest.xml
src/main/cpp/: ball.c  game_engine.c  input.c  main.c  physics.c  player.c  renderer.c  soccer_field.c
src/main/cpp/include/: game_engine.h  input.h  physics.h  renderer.h
